--- a/styles/customer/customer.module.scss
+++ b/styles/customer/customer.module.scss
@@ -18,7 +18,7 @@
 
       @media screen and (max-width: 414px) {
         width: 100%;
-        height: 650%;
+        height: 690%;
       }
 
       @media screen and (max-width: 390px) {
@@ -29,7 +29,7 @@
 
       @media screen and (max-width: 375px) {
         width: 100%;
-        height: 800%;
+        height: 700%;
         
       }
       @media screen and (max-width: 360px) {
@@ -209,8 +209,8 @@
     }
 
     @media screen and (max-width: 414px) {
-      width: 210%;
-      height: 200%;
+      width: 100%;
+      height: 170%;
       
     }
     @media screen and (max-width: 375px) {
@@ -627,10 +627,15 @@ display: none;
       top: 10px;
       height: 120%;
     }
+    @media (max-width: 414px) {
+      position: absolute;
+      top: 10px;
+      height: 1100px;
+    }
     @media (max-width: 375px) {
       position: absolute;
       top: 150px;
-      height: 670px;
+      height: 710px;
     }
     @media (max-width: 360px) {
       width: 100%;
@@ -667,8 +672,8 @@ display: none;
       }
       @media (max-width: 375px) {
         position: absolute;
-        margin-top: -50px;
-        max-height: 250px;
+        margin-top: -220px;
+        max-height: 170px;
       }
 }
 
@@ -709,8 +714,9 @@ display: none;
       }
       @media (max-width: 375px) {
         z-index: 10px;
-        margin-top: -50px;
-        height: 275px;
+        margin-top: -220px;
+        max-height: 172px;
+      
       }
 }
 
@@ -740,12 +746,12 @@ display: none;
         width: 100%;
         height: 50%;
         position: absolute;
-        top: -500px;
+        top: -570px;
 
       }
       @media screen and (max-width: 375px) {
         width: 100%;
-        height: 100%;
+        height: 30%;
         position: absolute;
         top: -800px;
       }
@@ -785,12 +791,12 @@ display: none;
         width: 100%;
         height: 50%;
         position: absolute;
-        top: -500px;
+        top: -570px;
 
       }
       @media screen and (max-width: 375px) {
         width: 100%;
-        height: 200px;
+        height: 75px;
         position: absolute;
         top: -800px;
       }
@@ -845,7 +851,7 @@ display: none;
 @media screen and (max-width: 414px) {
   font-size: 30px;
   -webkit-text-stroke: 0px #000;
-  margin-top: 150px;
+  margin-top: 120px;
 }
 @media screen and (max-width: 375px) {
   font-size: 25px;
@@ -932,7 +938,7 @@ display: none;
       }
     @media screen and (max-width: 414px) {
       position: relative;
-    top: 300px;
+    top: 380px;
     
     }
     @media screen and (max-width: 375px) {
@@ -1050,7 +1056,7 @@ width: 100%;
 @media screen and (max-width: 414px) {
   width: 100%;
   position: absolute;
-  top: 100px;
+  top: 120px;
   
 }
 
@@ -1112,7 +1118,7 @@ width: 100%;
   height: 50%;
   position: absolute;
   top: -295px;
-  left: 0px;
+  left: -10px;
   
 }
 @media screen and (max-width: 360px) {
@@ -1191,9 +1197,9 @@ display: none;
   }
   @media (max-width: 375px) {
     position: relative;
-    top: -320px;
-    width: 350px;
-    height: 1425px;
+    top: -450px;
+    width: 320px;
+    height: 1100px;
 
   }
 }
@@ -1216,13 +1222,13 @@ display: none;
   @media (max-width: 414px) {
     position: absolute;
     top: 30px;
-    left: 95px;
+    left: 105px;
     font-size: 28px;
   }
      @media (max-width: 375px) {
         position: absolute;
         top: 30px;
-        left: 130px;
+        left: 110px;
         font-size: 25px;
 
   }
@@ -1244,17 +1250,17 @@ display: none;
     font-size: 18px;
   }
   @media (max-width: 414px) {
-    width: 220px;
+    width: 320px;
     position: absolute;
-    top: 90px;
-    left: 55px;
+    top: 85px;
+    left: 15px;
     font-size: 18px;
   }
   @media (max-width: 375px) {
-    width: 240px;
+    width: 280px;
     position: absolute;
     top: 70px;
-    left: 70px;
+    left: 30px;
     font-size: 18px;
   }
 }
@@ -1295,10 +1301,10 @@ display: none;
   @media (max-width: 375px) {
     height: 270px;
     position: relative;
-    top: 120px;
-    left: 25px;
-    margin-top: 0px;
-    transform: scale(1);
+    top: 100px;
+    left: 11px;
+    margin-top: -10px;
+    transform: scale(0.9);
     }
   &:hover {
     transform: scale(1.1);
@@ -1342,7 +1348,7 @@ display: none;
   @media (max-width: 375px) {
     position: relative;
     font-size: .8rem;
-    top: 100px;
+    top: 50px;
     left: -50px;
 
     }
@@ -1382,15 +1388,15 @@ display: none;
   }
   @media (max-width: 414px) {
     position: absolute;
-    top: 800px;
+    top: 700px;
     width: 350px;
-    height:1050px;
+    height: 1050px;
   }
 
   @media (max-width: 375px) {
     position: relative;
-    top: 750px;
-    width: 350px;
+    top: 470px;
+    width: 320px;
     height: 1125px;
   }
 }
@@ -1416,15 +1422,15 @@ display: none;
   }
   @media (max-width: 414px) {
     position: relative;
-    top: -150px;
+    top: -170px;
     left: 0px;
     font-size: 28px;
   }
   @media (max-width: 375px) {
   position: relative;
   top: -160px;
-  left: 5px;
-  font-size: 45px;
+  left: 0px;
+  font-size: 30px;
   }
 }
 
@@ -1443,16 +1449,16 @@ display: none;
   }
   @media (max-width: 414px) {
     position: relative;
-    top: -150px;
+    top: -170px;
     left: 0px;
     font-size: 18px;
   }
   @media (max-width: 375px) {
     
-    width: 240px;
+    width: 220px;
     position: absolute;
-    top: 110px;
-    left: 70px;
+    top: 90px;
+    left:50px;
     font-size: 18px;
   }
 }
@@ -1481,14 +1487,14 @@ display: none;
     width: 300px;
     height: 240px;
     position: relative;
-    top: -180px;
-    left: 30px;
+    top: -190px;
+    left: 25px;
     margin-top: 10px;
 
     }
   @media (max-width: 375px) {
-    width: 300px;
-    height: 240px;
+    width: 250px;
+    height: 200px;
     position: relative;
     top: -100px;
     left: 40px;
