--- a/styles/customer/customer.module.scss
+++ b/styles/customer/customer.module.scss
@@ -18,7 +18,7 @@
 
       @media screen and (max-width: 414px) {
         width: 100%;
-        height: 690%;
+        height: 5596px;
       }
 
       @media screen and (max-width: 390px) {
@@ -29,12 +29,12 @@
 
       @media screen and (max-width: 375px) {
         width: 100%;
-        height: 700%;
+        height: 5096px;
         
       }
       @media screen and (max-width: 360px) {
         width: 100%;
-        height: 750%;
+        height: 796px;
         
       }
 
