--- a/styles/customer/customer.module.scss
+++ b/styles/customer/customer.module.scss
@@ -16,6 +16,11 @@
           height: 685%;
       }
 
+      @media screen and (max-width: 428px) {
+        width: 100%;
+        height: 6295px;
+    }
+
       @media screen and (max-width: 414px) {
         width: 100%;
         height: 5596px;
@@ -23,7 +28,7 @@
 
       @media screen and (max-width: 390px) {
         width: 100%;
-        height: 670%;
+        height: 5096px;
         
       }
 
@@ -594,6 +599,18 @@ display: none;
       top: 10px;
       height: 1100px;
     }
+    @media (max-width: 390px) {
+      width: 100%;
+      position: absolute;
+      top: 195px;
+      height: 290px;
+      @media (max-height: 777px) {
+        width: 100%;
+        position: absolute;
+        top: 168px;
+        height: 320px;
+      }
+    }
     @media (max-width: 375px) {
       width: 100%;
       position: absolute;
@@ -632,6 +649,19 @@ display: none;
       top: 10px;
       height: 1100px;
     }
+    @media (max-width: 390px) {
+      width: 100%;
+      position: absolute;
+      top: 180px;
+      height: 767px;
+      @media (max-height: 745px) {
+        width: 100%;
+        position: absolute;
+        top: 168px;
+        height: 747px;
+      }
+      
+    }
     @media (max-width: 375px) {
       position: absolute;
       top: 150px;
@@ -669,6 +699,11 @@ display: none;
         position: absolute;
         margin-top: 150px;
         max-height: 250px;
+      }
+      @media (max-width: 390px) {
+        position: absolute;
+        margin-top: -170px;
+        max-height: 170px;
       }
       @media (max-width: 375px) {
         position: absolute;
@@ -712,6 +747,12 @@ display: none;
         margin-top: 150px;
         max-height: 260px;
       }
+      @media (max-width: 390px) {
+        z-index: 10px;
+        margin-top: -170px;
+        max-height: 172px;
+      
+      }
       @media (max-width: 375px) {
         z-index: 10px;
         margin-top: -220px;
@@ -748,6 +789,12 @@ display: none;
         position: absolute;
         top: -570px;
 
+      }
+      @media screen and (max-width: 390px) {
+        width: 100%;
+        height: 30%;
+        position: absolute;
+        top: -800px;
       }
       @media screen and (max-width: 375px) {
         width: 100%;
@@ -794,6 +841,12 @@ display: none;
         top: -570px;
 
       }
+      @media screen and (max-width: 390px) {
+        width: 100%;
+        height: 75px;
+        position: absolute;
+        top: -800px;
+      }
       @media screen and (max-width: 375px) {
         width: 100%;
         height: 75px;
@@ -834,7 +887,6 @@ display: none;
     margin-bottom: 10px;
     @media screen and (max-width: 715px) {
       padding: 20 20 20 20;
-
       font-size: 30px;
       
   }
@@ -852,6 +904,12 @@ display: none;
   font-size: 30px;
   -webkit-text-stroke: 0px #000;
   margin-top: 120px;
+}
+@media screen and (max-width: 390px) {
+  font-size: 25px;
+  -webkit-text-stroke: 0px #000;
+  margin-top: 50px;
+  margin-bottom: 0px;
 }
 @media screen and (max-width: 375px) {
   font-size: 25px;
@@ -974,6 +1032,14 @@ display: none;
   font-size: 30px;
   width: 300px;
 }
+@media screen and (max-width: 390px) {
+  position: absolute;
+  top: -410px;
+  line-height: 30px;
+  font-size: 25px;
+  width: 300px;
+  
+}
 @media screen and (max-width: 375px) {
   position: absolute;
   top: -100px;
@@ -1009,6 +1075,14 @@ display: none;
   position: absolute;
   width: 350px;
   top: -200px;
+  font-size: 15px;
+  
+}
+@media screen and (max-width: 390px) {
+
+  position: absolute;
+  max-width: 300px;
+  top: -390px;
   font-size: 15px;
   
 }
@@ -1060,6 +1134,12 @@ width: 100%;
   
 }
 
+@media screen and (max-width: 390px) {
+  width: 100%;
+  position: absolute;
+  top: -50px;
+  
+}
 @media screen and (max-width: 375px) {
   width: 100%;
   position: absolute;
@@ -1111,6 +1191,14 @@ width: 100%;
   left: 0px;
   top: -50px;
   margin-left: 40px;
+  
+}
+@media screen and (max-width: 390px) {
+  width: 85%;
+  height: 50%;
+  position: absolute;
+  top: -295px;
+  left: -10px;
   
 }
 @media screen and (max-width: 375px) {
@@ -1188,6 +1276,12 @@ display: none;
     top: -100px;
     width: 350px;
     height: 1150px;
+  }
+  @media (max-width: 390px) {
+    position: relative;
+    top: -420px;
+    width: 350px;
+    height: 1425px;
   }
   @media (max-width: 375px) {
     position: relative;
@@ -1392,6 +1486,12 @@ display: none;
     width: 350px;
     height: 1050px;
   }
+  @media (max-width: 390px) {
+    position: relative;
+    top: 470px;
+    width: 320px;
+    height: 955px;
+  }
 
   @media (max-width: 375px) {
     position: relative;
@@ -1492,6 +1592,15 @@ display: none;
     margin-top: 10px;
 
     }
+    @media (max-width: 390px) {
+      width: 250px;
+      height: 200px;
+      position: relative;
+      top: -180px;
+      left: 38px;
+      margin-top: 0px;
+  
+      }
   @media (max-width: 375px) {
     width: 250px;
     height: 200px;
@@ -1534,6 +1643,14 @@ display: none;
     top: 970px;
     left: 45px;
     }
+    @media (max-width: 390px) {
+      position: relative;
+      font-size: .8rem;
+      top: -150px;
+      left: -30px;
+      margin-left: 0px;
+  
+      }
   @media (max-width: 375px) {
     position: relative;
     font-size: .8rem;
