--- a/styles/customer/customer.module.scss
+++ b/styles/customer/customer.module.scss
@@ -1374,19 +1374,15 @@ display: none;
     position: relative;
     top: 200px;
     left: 90px;
+    width: 300px;
+    height: 440px;
     }
-  // @media (max-width: 430px) {
-  //   height: 270px;
-  //   position: relative;
-  //   top: 120px;
-  //   left: 40px;
-  //   transform: scale(1);
-  //   }
     @media (max-width: 428px) {
+      width: 300px;
       height: 270px;
       position: relative;
-      top: 120px;
-      left: 40px;
+      top: 100px;
+      left: 25px;
 
       }
   @media (max-width: 414px) {
